2011-11-15  Ozkan Sezer  <sezeroz@gmail.com>

	* lib64/kernel32.def (RegUnLoadKeyA): Comment out advapi32 export.
	(RegUnLoadKeyW): Likewise.

2011-11-09  Kai Tietz  <ktietz@redhat.com>

	* lib32/msvcr*.def: Make sure _assert and _wassert are marked DATA.
	* lib64/msvcr*.def: Likewise.

2011-11-04  Ozkan Sezer  <sezeroz@gmail.com>

	gdtoa: Sync to match the latest version at netlib.org as of Nov. 02
	2011.  Changelog from http://netlib.org/fp/changes :
	    Add field int_max to struct FPI and adjust gdtoa.c and *fmt.c
	    so gdtoa.c tests against fpi->int_max rather than Int_max. This
	    only affects some conversions by g_ffmt.c, which in some cases
	    produced too many digits.

2011-11-02  Ozkan Sezer  <sezeroz@gmail.com>

	Break stdio/asprintf.c and misc/uchar.c into pieces, one function
	per compilation unit:
	* stdio/vasprintf.c: New.
	* misc/uchar_c16rtomb.c: New.
	* misc/uchar_c32rtomb.c: New.
	* misc/uchar_mbrtoc16.c: New.
	* misc/uchar_mbrtoc32.c: New.
	* Makefile.am: Adjust.
	* Makefile.in: Regenerate.

2011-11-01  Ozkan Sezer  <sezeroz@gmail.com>

	* stdio/asprintf.c: Define __CRT__NO_INLINE before including any
	headers.
	(__mingw_asprintf, __mingw_vasprintf): Use __restrict__ for first
	and second args.

2011-10-29  Jonathan Yong  <jon_y@users.sourceforge.net>

	* lib32/dwmapi.def: New.
	* Makefile.am: Added lib32/libdwmapi.a
	* Makefile.in: Regenerated.

2011-10-09  Ruben Van Boxem  <vanboxem.ruben@gmail.com>

	* misc/isblank.c: Replaced _cdecl by __cdecl.
	* misc/iswblank.c: Likewise.

2011-09-27  Ozkan Sezer  <sezeroz@gmail.com>

	* misc/uchar.c (mbrtoc32): Mark last 'ps' argument as unused.
	(c32rtomb): Likewise.

2011-09-27  Ruben Van Boxem  <vanboxem.ruben@gmail.com>
	    Ozkan Sezer  <sezeroz@gmail.com>

	* misc/uchar.c: New source with initial implementations of mbrtoc16(),
	c16rtomb(), mbrtoc32() and c32rtomb() for uchar.h.
	* testcases/uchar_size_1.c: A new basic test case for uchar.h

2011-09-27  Ozkan Sezer  <sezeroz@gmail.com>
